--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.7"
+    "@astrojs/netlify": "^6.5.10",
+    "@astrojs/react": "^4.3.1",
+    "@sanity/astro": "^3.2.10",
+    "@sanity/client": "^7.11.1",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "astro": "^5.13.7",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-is": "^19.1.1",
+    "sanity": "^4.8.1",
+    "styled-components": "^6.1.19"
   }
 }
